# esp-claw-control-1

./: .gitignore  PROJECT_RECOVERY_AND_IMPROVEMENT_GUIDE.md  README.md  RECUPERACION_PLACA_VERSION_ANTIGUA.md  RECUPERACION_WIFI_SERIAL.md  RELAY_OLED_TELEGRAM_SETUP.md  sdkconfig.defaults
boards/espressif/esp32_S3_DevKitC_1/: sdkconfig.defaults.board
components/app_config/: app_config.c
components/app_config/include/: app_config.h
components/cmd_espnow/: CMakeLists.txt  cmd_espnow.c  cmd_espnow.h
components/espnow_link/: CMakeLists.txt  espnow_link.c
components/espnow_link/include/: espnow_link.h
components/espnow_slave_control/: CMakeLists.txt  espnow_slave_control.c
components/espnow_slave_control/include/: espnow_slave_control.h
fatfs_image/router_rules/: router_rules.json  router_rules_original.json
fatfs_image/scripts/user/: espnow_porton_command.lua  relay_oled_command.lua  relay_oled_service.lua  relay_oled_shared.lua  relay_timer.lua  telegram_reply_markup_probe.lua
fatfs_image/skills/: skills_list.json
main/: CMakeLists.txt  idf_component.yml  main.c
main/skills/: esp32_coding_assistant.md  skills_list.json
tools/cmake/: esp_idf_patch.cmake  flash_partition_defaults.cmake
